--- a/components/Home/FeaturedBlogs.module.css
+++ b/components/Home/FeaturedBlogs.module.css
@@ -8,6 +8,7 @@
     font-size: var(--size-8);
     color: var(--color-grey-800);
     text-align: center;
+    margin: var(--size-8) auto;
 }
 
 @media (min-width: 768px) {
